kubernetes/tanzu-ui/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tanzu-ui
  labels:
    app: tanzu-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tanzu-ui
  template:
    metadata:
      labels:
        app: tanzu-ui
    spec:
      containers:
      - name: tanzu-ui
        image: ghcr.io/vchrisb/tanzu-ui:latest
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: /app/staticfiles
            name: staticfiles
      volumes:
        - name: staticfiles
          emptyDir: {}
