kubernetes/tanzu-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tanzu-ui
spec:
  selector:
    app: tanzu-ui
  ports:
    - name: web
      protocol: TCP
      port: 8080
