kubernetes/tanzu-ui/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tanzu-ui
  labels:
    app: tanzu-ui
spec:
  tls:
  - hosts:
    - ui.domain.com
    secretName: default-ingress-secret
  rules:
  - host: ui.domain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tanzu-ui
          servicePort: web
